# pt2so-factor-mlp

./: .gitattributes  .gitignore  README.md  requirements.txt
artifacts/factor_mlp/: model_info.yaml
python/: factor_mlp.py
runtime/: CMakeLists.txt
runtime/include/: blob.h  data_source.h  embedded_key.h  factor_mlp.h  model_api.h  model_session.h  state_dict.h  weight_pack.h
runtime/src/: aes_key_empty.cpp  blob_empty.cpp  factor_mlp.cpp  model_api.cpp  model_session.cpp  state_dict.cpp  weight_pack.cpp
scripts/: benchmark_crypto_linux.sh  build_linux.sh  check_runtime_deps_linux.sh  run_pipeline_linux.sh  test_data_source_linux.sh
tools/: benchmark_create.cpp  compare_reference_outputs.py  create_factor_mlp.py  encrypt_model.py  encrypt_weights.py  extract_weights.py  generate_blob.py  run_dlopen_model.cpp  run_python_pt_reference.py  summarize_crypto_benchmark.py  test.md  test_data_source.cpp  validate_ctypes.py
